test/functions/resolution/errors/testBadCallCandidates.13.good
testBadCallCandidates.chpl:14: In method 'test':
testBadCallCandidates.chpl:22: error: unresolved call 'C.bar(42)'
testBadCallCandidates.chpl:36: note: this candidate did not match: D.bar(x: int)
testBadCallCandidates.chpl:22: note: because method call receiver with type 'borrowed C'
testBadCallCandidates.chpl:32: note: is passed to formal 'this: borrowed D'
testBadCallCandidates.chpl:22: note: other candidates are:
testBadCallCandidates.chpl:8: note:   C.bar(x: string)
testBadCallCandidates.chpl:11: note:   C.bar(x: D)
note: and 1 other candidate, use --print-all-candidates to see it
